# tictactoe

./: .gitignore  00_spiral.ipynb  00_util.ipynb  01_spiral_api.ipynb  02_ipython_magic.ipynb  03_algo_network.ipynb  04_tictactoe_pyteal.ipynb  05_tictactoe_testnet.ipynb  Cargo.toml  Makefile  README.md  _nbdev.py  algo_network.html  algo_network.ts  algorand_sandbox.ps1  application_start.teal  build-fsx-py.ps1  build-fsx-ts.ps1  build.ps1  build_spiral.ts  bun.lockb  console.spi  console_fsx.spi  console_pyx.spi  index.html  init.ps1  init.sh  ipython_magic.html  ipython_magic.py  livebook.ps1  main.dib  main.exs  main.fsx  main.ipynb  main.py  main.pyx  main.rs  main.spi  network.ipynb  network.py  (+38 more)
.config/: dotnet-tools.json
.devcontainer/: .env  Dockerfile  devcontainer.json
.github/workflows/: dist.yaml  fleek.yaml  gh-pages.yaml  playwright.yaml  workflow.yaml
_data/sidebars/: home_sidebar.yml
assets/: App.032a5929.css  App.182996d6.js  App.2e8a63f1.js  App.326f190b.css  App.4706f4fe.js  App.47b35fcd.js  App.578f5402.js  App.57a570b2.js  App.5fb4cb3a.js  App.6bcac363.js  App.6f35b97a.js  App.7fb29421.css  App.83999b3c.js  App.8e60aa7a.js  App.9cdc333f.js  App.a0ccdb63.js  App.a4ed05b2.css  App.a97250b4.js  App.c146291a.js  App.cfb8caae.js  App.d0316ec6.js  App.e4a4cea3.js  App.ef20b505.js  App.fb29e5b7.js  algosdk.06b5fc7c.js  algosdk.15cb4a09.js  algosdk.1f5ea697.js  algosdk.478d7268.js  algosdk.5e772e3d.js  algosdk.66d6db55.js  algosdk.7ee7fe43.js  algosdk.97bf8f01.js  algosdk.b786ce84.js  algosdk.e8b6bf43.js  algosdk.f4b83039.js  algosdk.f711891f.js  algosdk.fa9d3a77.js  buffer.6ef84f74.js  client_bg-5641d434.wasm  client_bg-5a757000.wasm  (+122 more)
docs/: _config.yml  algo_network.html  index.html  ipython_magic.html  sidebar.json  spiral_api.html  tictactoe_pyteal.html  tictactoe_testnet.html  util.html  util_node.html
docs/_data/: topnav.yml
lib_ex/: .gitignore  README.md  docker-compose.yml  install.sh  mix.exs
lib_ex/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib_ex/lib/: lib_ex.ex  lib_ex_web.ex
lib_ex/lib/lib_ex/: application.ex  mailer.ex  repo.ex
lib_ex/lib/lib_ex_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib_ex/lib/lib_ex_web/views/: error_helpers.ex  (+3 more)
lib_ex/priv/repo/: seeds.exs
lib_ex/test/: test_helper.exs
lib_ex/test/support/: conn_case.ex  data_case.ex
lib_fsx/: build-py.ps1  build-ts.ps1  components_spi.fsx  paket.references  peer_spi.fsx  tictactoe_pyteal_spi.fsx  tictactoe_spiral.fsproj
lib_py/: _nbdev.py  algo_network.py  components.py  ipython_magic.py  peer.py  spiral_api.py  supervisor.py  tictactoe_pyteal.py  tictactoe_pyteal_spi.py  tictactoe_testnet.py  util.py  util_node.py
lib_rs/: Cargo.toml
lib_rs/src/: main.rs
lib_spi/: chain.spi  console_fsx.spi  ipython.spi  js.spi  main.spi  package.fsproj  package.spiproj  peer.fsx  peer.spi  pyteal.spi  real_js.spir  real_util.spir  tictactoe.spi  tictactoe_pyteal.spi  tictactoe_testnet.spi  util.spi  util_.spi
lib_spi/cli/: Cargo.toml  build.ps1  cli.fsx  cli.rs  cli.spi  main.rs
lib_spi/client/: Cargo.toml  build.ps1  bun.lockb  client.fsproj  client.fsx  client.rs  client.spi  index.html  lib.rs  package.json  vite.config.ts
lib_spi/client/src/: client.fsx  client.rs  client.spi  lib.rs  main.rs
lib_spi/proxy/: Cargo.toml  build.ps1  proxy.fsx  proxy.rs  proxy.spi
lib_spi/rust/: Types.fs  util.spi
lib_spi/supervisor/: Cargo.toml  build.ps1  main.rs  supervisor.fsproj  supervisor.fsx  supervisor.rs  supervisor.spi
lib_spi/supervisor/src/: File.fs  Types.fs  main.rs  main.spi  std.fs  supervisor.fsx  supervisor.rs  supervisor.spi  supervisor_rs.rs
lib_spi/ui/: chain.spi  components'.fsx  components'.spi  db.spi  profile.spi  real_solid.spir  real_state.spir  solid.spi  state.spi  store.spi
lib_spi/ui/components/: base_button.spi  base_checkbox.spi  base_icon.spi  base_select.spi  base_table.spi  chain.spi  chain_accounts.spi  chain_connection.spi  chain_deploy.spi  chain_status.spi  content.spi  counter.spi  database.spi  db_client.spi  db_clients.spi  db_connection.spi  db_connection_input.spi  db_connection_options.spi  db_connection_options_input.spi  db_connections.spi  db_listener.spi  debug.spi  external_link.spi  links.spi  loader.spi  row.spi  settings.spi  state_input.spi
lib_spi/ui/hooks/: use_fetch.spi  use_store.spi
lib_teal/: game_funds_escrow.teal
lib_ts/: algo_network.ts  components_spi.tsx  peer.tsx  peer_spi.tsx  spiral_api.ts  tictactoe_testnet.ts  util.ts  util_node.ts
lib_ts/ui/: components'.tsx
nbs/: 00_cli.ipynb  00_client.ipynb  00_components.ipynb  00_peer.ipynb  00_supervisor.ipynb  00_util.ipynb  00_util.livemd  00_util_node.ipynb  01_spiral_api.ipynb  02_ipython_magic.ipynb  03_tictactoe_pyteal.ipynb  04_algo_network.ipynb  05_tictactoe_testnet.ipynb  06_index.ipynb
peer/: bun.lockb  package.json  pnpm-lock.yaml  server.ts  start.ps1
peer/patches/: mkcert@1.5.1.patch
peer_gunjs/: .gitignore  bun.lockb  package.json  pnpm-lock.yaml  start.ps1
peer_gunrs/: .gitignore
peer_signalr/: Core.fs  HubServer.fs  Main.fs  Stream.fs  paket.references  peer_signalr.fsproj
peer_signalr/FsClr/: Logger.fs
peer_signalr/FsCore/: Core.fs
web/: buffer_shim.ts  bun.lockb  content_script.js  extension_background.js  extension_content_script.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
web/public/: manifest.json
web/src/: App.module.css  App.tsx  Loader.tsx  chain.ts  content_script.tsx  db.ts  index.css  index.tsx  profile.ts  raw.ts  store.ts  ui.ts
web/src/components/: BaseButton.tsx  BaseTable.tsx  Chain.tsx  ChainAccountInput.tsx  ChainAccounts.tsx  ChainConnection.tsx  ChainDeploy.tsx  ChainStatus.tsx  Content.tsx  Counter.tsx  Database.tsx  DbConnection.tsx  DbConnectionInput.tsx  DbListener.tsx  ExternalLink.tsx  Links.tsx  Loader.tsx  Row.tsx  Settings.tsx  StateInput.tsx
web/src/diff/: 1221_1.txt  1221_2.txt  1221_3.txt  1221_4.txt  Diff.tsx  raw.ts
web/src/hooks/: useFetch.ts  useStore.ts
web/tests/: deployApplication.spec.ts  test1.spec.ts
(+6 files in other folders)
