[package]
name = "tictactoe"
version = "0.0.1"
edition = "2021"

[dependencies]

[dev-dependencies]

[build-dependencies]
supervisor = { path = "./lib_spi/supervisor" }
cli = { path = "./lib_spi/cli" }
client = { path = "./lib_spi/client" }

[lib]
path = "./lib_spi/cli/main.rs"



[workspace]

members = [
    "lib_spi/supervisor",
    "lib_spi/cli",
    "lib_spi/client",
]
