[package]
name = "cli"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "~0.4"
clap = { version = "~4.0", features = ["derive"] }
colored = "~2.0"
fable_library_rust = { path = "../supervisor/fable_modules/fable-library-rust" }
rand = "~0.8"
serde_json = "~1.0"
zmq = "~0.10"
linereader = "~0.4"
regex = "~1.7"

[[bin]]
name = "cli"
path = "./main.rs"
