[package]
name = "cli"
version = "0.0.1"
edition = "2021"

[dependencies]
chrono = "~0.4"
clap = { version = "~4.1", features = ["derive"] }
colored = "~2.0"
fable_library_rust = { path = "../supervisor/fable_modules/fable-library-rust" }
rand = "~0.8"
serde_json = "~1.0"
zmq = "~0.10"
linereader = "~0.4"
regex = "~1.7"
wasm-bindgen = { version = "~0.2", features = ["enable-interning"] }
web-sys = { version = "~0.3", features = ["console", "Document", "Window", "HtmlBodyElement", "HtmlIFrameElement"] }
js-sys = "~0.3"
serde-wasm-bindgen = "~0.4"

[[bin]]
name = "cli"
path = "./main.rs"
