
[package]
name = "client"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./src/lib.rs"

[dependencies]
fable_library_rust = { path = "../supervisor/src/fable_modules/fable-library-rust" }

# rand = { version = "~0.8", features = ["small_rng"] }
# colored = "~2.0"

#  zmq = "~0.10"

#  axum = "~0.6"
wasm-bindgen = { version = "~0.2", features = ["enable-interning"] }

web-sys = { version = "~0.3", features = ["console"] }

druid = { version = "~0.7", features = ["im", "image", "png"] }
# console_error_panic_hook = "~0.1"
tracing = "~0.1"
log = "~0.4"
# instant = { version = "0.1.6", features = ["wasm-bindgen"] }

# tokio = { version = "~1.23", features = ["full"] }

# serde = { version = "~1.0", features = ["derive"] }
# serde_json = "~1.0"

# once_cell = "~1.17"


[target.'cfg(target_arch = "wasm32")'.dependencies]
# tracing-wasm = { version = "0.2.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# simple_logger = { version = "1.9.0", default-features = false }
# async-std = "~1.12"
# directories-next = "~2.0"


[build-dependencies]
